tests/baselines/reference/qualifiedModuleLocals.errors.txt
qualifiedModuleLocals.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualifiedModuleLocals.ts(5,27): error TS2339: Property 'b' does not exist on type 'typeof A'.


==== qualifiedModuleLocals.ts (2 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
      function b() {}
    
      export function a(){  A.b();  } // A.b should be an unresolved symbol error
                              ~
!!! error TS2339: Property 'b' does not exist on type 'typeof A'.
    
    }
    
    A.a();
    